--- a/ImGui Loader Base.vcxproj.filters
+++ b/ImGui Loader Base.vcxproj.filters
@@ -21,13 +21,15 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="header Files\imgui\imgui_tables.cpp" />
-    <ClCompile Include="menu\menu.cc" />
-    <ClCompile Include="functions\mouse.cpp" />
-    <ClCompile Include="functions\keyboard.cpp" />
+    <ClCompile Include="menu\menu.cpp" />
+    <ClCompile Include="functions\input\mouse.cpp" />
+    <ClCompile Include="functions\input\keyboard.cpp" />
     <ClCompile Include="functions\memory.cpp" />
     <ClCompile Include="modules\teleport.cpp" />
     <ClCompile Include="functions\utils.cpp" />
     <ClCompile Include="functions\configManger.cpp" />
+    <ClCompile Include="functions\other\colored_cout.cpp" />
+    <ClCompile Include="modules\esp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header Files\imgui\imconfig.h">
@@ -69,6 +71,11 @@
     <ClInclude Include="header Files\json\nlohmann\json_fwd.hpp" />
     <ClInclude Include="header Files\json\json.hpp" />
     <ClInclude Include="header Files\json\json_fwd.hpp" />
+    <ClInclude Include="header Files\functions\keyboard.h" />
+    <ClInclude Include="header Files\functions\mouse.h" />
+    <ClInclude Include="header Files\functions\colored_cout.h" />
+    <ClInclude Include="header Files\modules\esp.h" />
+    <ClInclude Include="header Files\offsets.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
